[package]
name = "mo"
version = "0.1.0-pre-alpha"
edition = "2021"

[lib]
name = "mo"
path = "src/lib.rs"

[[bin]]
name = "mo"
path = "src/main.rs"

[dependencies]
cranelift-codegen = { version = "0.121", features = ["all-native-arch"] }
cranelift-frontend = "0.121"
cranelift-module = "0.121"
cranelift-native = "0.121"
cranelift-object = "0.121"
object = { version = "0.36", features = ["write"] }
target-lexicon = "0.13"
